treate resumes as if they could be malisous
